pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-global-auth-disabled.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-global-auth-disabled
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/enable-global-auth: "false"

spec:
  ingressClassName: nginx
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
